--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
 #Fri May 15 12:22:58 PDT 2015
 app.grails.version=2.4.4
-app.name=MyBudgetBackend
-app.version=0.1
+app.name=MyBudget
+app.version=0.9
